--- a/styles/sales.css
+++ b/styles/sales.css
@@ -56,6 +56,37 @@ body{
     background-color: var(--color-background);
 }
 
+.jumbotron-custom-tshirts {
+    background-size: cover;
+    color: #000000;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
+            padding: 4rem 2rem;
+            margin-bottom: 2rem;
+        }
+        .jumbotron-custom-tshirts h1, .jumbotron-custom-tshirts p {
+            text-align: center;
+        }
+        .jumbotron-custom-tshirts .lead {
+            font-size: 1.5rem;
+            text-align: center;
+        }
+        .custom-section {
+            margin-top: 2rem;
+            margin-bottom: 2rem;
+        }
+        .custom-card-title {
+            font-weight: bold;
+        }
+        .custom-card-text {
+            font-size: 1.2rem;
+        }
+        .custom-list-group-item {
+            font-size: 1rem;
+        }
+        .chart-container-custom {
+            height: 400px; /* Altura específica para el contenedor del gráfico */
+        }
+
 a{
     color: var(--color-dark);
 }
@@ -111,14 +142,6 @@ b{
 
 .warning{
     color: var(--color-warning);
-}
-
-.container{
-    display: grid;
-    width: 96%;
-    margin: 0 auto;
-    gap: 1.8rem;
-    grid-template-columns: 12rem auto 23rem;
 }
 
 aside{
