--- a/styles/index.css
+++ b/styles/index.css
@@ -116,13 +116,14 @@ b{
 .container{
     display: grid;
     width: 96%;
-    margin: 0 auto;
+    margin: 0 auto;  
     gap: 1.8rem;
     grid-template-columns: 12rem auto 23rem;
 }
 
 aside{
     height: 100vh;
+    margin: 0%;
 }
 
 aside .toggle{
