--- a/styles/custom.css
+++ b/styles/custom.css
@@ -371,12 +371,24 @@ main table tbody tr:last-child td{
     border: none;
 }
 
-main .recent-orders a{
+main .recent-orders a,.pagination{
     text-align: center;
-    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     margin: 1rem auto;
     color: var(--color-primary);
+    list-style: none;
+
 }
+.pagination li a{
+    padding: var(--card-padding);
+    background-color: var(--color-white);
+    border-radius: var(--card-border-radius);
+}
+
+
 
 .right-section{
     margin-top: 1.4rem;
@@ -707,3 +719,4 @@ main .recent-orders a{
     }
 
 }
+
