--- a/styles/users.css
+++ b/styles/users.css
@@ -222,6 +222,8 @@ aside .sidebar .message-count{
 
 main{
     margin-top: 1.4rem;
+    width: fit-content;
+    overflow-x: auto;
 }
 
 main .analyse{
@@ -363,6 +365,7 @@ main .recent-orders table:hover{
 
 main table tbody td{
     height: 2.8rem;
+    border-radius: 2%;
     border-bottom: 1px solid var(--color-light);
     color: var(--color-dark-variant);
 }
@@ -384,7 +387,7 @@ main .recent-orders a{
 
 .right-section .nav{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     gap: 2rem;
 }
 
@@ -459,82 +462,6 @@ main .recent-orders a{
     margin-bottom: 0.2rem;
 }
 
-.right-section .reminders{
-    margin-top: 2rem;
-}
-
-.right-section .reminders .header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 0.8rem;
-}
-
-.right-section .reminders .header span{
-    padding: 10px;
-    box-shadow: var(--box-shadow);
-    background-color: var(--color-white);
-    border-radius: 50%;
-}
-
-.right-section .reminders .notification{
-    background-color: var(--color-white);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 0.7rem;
-    padding: 1.4rem var(--card-padding);
-    border-radius: var(--border-radius-2);
-    box-shadow: var(--box-shadow);
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.right-section .reminders .notification:hover{
-    box-shadow: none;
-}
-
-.right-section .reminders .notification .content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-    width: 100%;
-}
-
-.right-section .reminders .notification .icon{
-    padding: 0.6rem;
-    color: var(--color-white);
-    background-color: var(--color-success);
-    border-radius: 20%;
-    display: flex;
-}
-
-.right-section .reminders .notification.deactive .icon{
-    background-color: var(--color-danger);
-}
-
-.right-section .reminders .add-reminder{
-    background-color: var(--color-white);
-    border: 2px dashed var(--color-primary);
-    color: var(--color-primary);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.right-section .reminders .add-reminder:hover{
-    background-color: var(--color-primary);
-    color: white;
-}
-
-.right-section .reminders .add-reminder div{
-    display: flex;
-    align-items: center;
-    gap: 0.6rem;
-}
-
 @media screen and (max-width: 1200px) {
     .container{
         width: 95%;
@@ -557,6 +484,7 @@ main .recent-orders a{
         position: relative;
         margin-top: 1.8rem;
     }
+
 
     main .analyse{
         grid-template-columns: 1fr;
@@ -588,8 +516,49 @@ main .recent-orders a{
     main table tbody tr td:first-child{
         display: none;
     }
+    main .form-container{
+        overflow-x: auto;
+    }
+
+    
 
 }
+.table_component {
+                    overflow: auto;
+                    width: 100%;
+                }
+                
+                .table_component table {
+                    border: 1px solid #282a36;
+                    height: 100%;
+                    width: 90%;
+                    table-layout: auto;
+                    border-collapse: collapse;
+                    border-spacing: 1px;
+                    text-align: left;
+                }
+                
+                .table_component caption {
+                    caption-side: top;
+                    text-align: left;
+                }
+                
+                .table_component th {
+                    border: 1px solid #282a36;
+                    background-color: #eceff1;
+                    color: #000000;
+                    padding: 5px;
+                }
+                
+                .table_component td {
+                    border: 1px solid #282a36;
+                    background-color: #ffffff;
+                    color: #000000;
+                    padding: 5px;
+                }
+
+
+                
 
 @media screen and (max-width: 768px) {
     .container{
@@ -610,6 +579,24 @@ main .recent-orders a{
         animation: showMenu 0.4s ease forwards;
         overflow: auto;
     }
+    
+    
+    table {
+        width: 60%;
+        min-width: 768px; /* Ajusta según el tamaño mínimo necesario para tu tabla */
+        overflow-x: auto;
+    }
+    .button-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    button {
+        width: 80%; /* Ajusta el ancho de los botones si es necesario */
+        margin-bottom: 10px; /* Espacio entre los botones */
+    }
+      
 
     @keyframes showMenu {
        to{
@@ -706,4 +693,103 @@ main .recent-orders a{
         font-size: 2rem;
     }
 
+}
+
+button {
+    background-color: #44475a; /* Verde por defecto */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
+    margin: 5px;
+}
+
+#delete-user-btn {
+    background-color: #ff5555; /* Rojo */
+}
+
+#delete-user-btn:hover {
+    background-color: #d32f2f;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 10px;
+}
+
+.close-btn {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label {
+    margin-top: 10px;
+}
+
+input {
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+input[type="email"],
+input[type="date"],
+input[type="datetime-local"],
+input[type="password"],
+input[type="text"] {
+    margin-bottom: 20px;
+}
+
+button[type="submit"] {
+    background-color: #4CAF50; /* Verde */
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button[type="submit"]:hover {
+    background-color: #45a049;
 }
