--- a/styles/employees.css
+++ b/styles/employees.css
@@ -22,13 +22,15 @@ th, td {
 }
 
 th {
-    background-color: #fffcfc;
+    background-color: #ffffff;
     color: #000000;
     font-weight: 600;
 }
-
+tr{
+    background-color: #ffffff;
+}
 tr:hover {
-    background-color: #f1f1f1;
+    background-color: #c7c7c7;
 }
 
 td img {
@@ -50,7 +52,7 @@ td img {
     }
 
     tr {
-        border: 1px solid #ddd;
+        border: 1px solid #ffffff;
         margin-bottom: 10px;
     }
 
