--- a/styles/login.css
+++ b/styles/login.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: url('/img/logo.jpeg') no-repeat center center fixed;
     background-size: cover;
     filter: blur(7px);
@@ -25,8 +25,8 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Color overlay */
+    height: 100vh;
+    background: rgba(163, 162, 162, 0.5); /* Color overlay */
     z-index: 1;
 }
 .main {
@@ -46,8 +46,8 @@ body {
     width: 100%;
     max-width: 600px;
     padding: 20px;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+    background-color: #fff;
     border-radius: 10px;
 }
 
@@ -59,23 +59,29 @@ body {
 .title {
     font-size: 24px;
     margin: 0;
-    color: #333;
+    color: #000000;
 }
 
 .loginbox {
     width: 100%;
+
 }
 
 .loginbox form {
+
     display: flex;
     flex-direction: column;
     gap: 15px;
+    
+}
+.input{
+    border :#fff ;
 }
 
 .inputbox {
     width: 100%;
     padding: 2px;
-    border: 1px solid #8b8989;
+    border: 1px solid #acacac;
     border-radius: 5px;
     font-size: 16px;
 }
