--- a/styles/login.css
+++ b/styles/login.css
@@ -118,7 +118,42 @@ body {
 .remember a:hover {
     text-decoration: underline;
 }
-
+.modal {
+    padding-top: 5%;
+    display:none; 
+    position: absolute; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    border-radius: 6px;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5);
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 @media (max-width: 480px) {
     .container {
         padding: 10px;
@@ -131,4 +166,8 @@ body {
     .inputbox, .button {
         font-size: 14px;
     }
+    .modal{
+        padding-top: 70%;
+    }
+ 
 }
