--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -222,40 +222,85 @@ aside .sidebar .message-count{
  .reviews{
     margin-top: 5%;
 }
-.top-products-table {
-    width: 97%;
-    background-color: #ffffff;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-collapse: collapse;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow-x: auto;
-}
+        .top-products-table-custom {
+            width: 98%;
+            background-color: #ffffff;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            border-collapse: collapse;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow-x: auto;
+        }
 
-.top-products-table th,
-.top-products-table td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #cccccc;
-}
+        .top-products-table-custom th,
+        .top-products-table-custom td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #cccccc;
 
-.top-products-table th {
-    background-color: #ffffff;
-    font-weight: bold;
-}
+        }
+        .top-products-table-custom img{
+            width: 50px;
+        }
+        .top-products-table-custom th {
+            background-color: #ffffff;
+            font-weight: bold;
+        }
 
+        .top-products-table-custom td:last-child {
+            font-size: 16px;
+            color: #ffc107; 
+        }
 
-.top-products-table td:last-child {
-    font-size: 16px;
-    color: #ffc107; 
-}
+        .top-products-table-custom td:last-child::before {
+            content: '★★★★★'; 
+            font-size: 18px;
+        }
 
+        .modal-custom {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+            padding-top: 11%;
+        }
 
-.top-products-table td:last-child::before {
-    content: '★★★★★'; 
-    font-size: 18px;
-}
+        .modal-content-custom {
+            background-color: #fefefe;
+            margin: 5% auto;
+            padding: 20px;
+            align-self: center;
+            border: 1px solid #888;
+            width: 80%;
+            border-radius: 4%;
+            max-width: 300px;
+            color: #000;
+        }
+        .modal-content-custom p {
+            font-size: 12px;
+            margin-bottom: 5px;
+            color: #202528;
+        }
+        .close-custom {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close-custom:hover,
+        .close-custom:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
 .top-products-table,
 .accordion,
 .search-dropdown {
@@ -385,6 +430,9 @@ aside .sidebar .message-count{
 }
 
 .accordion-content {
+
+    display: flex;
+    justify-content: center;
     padding: 14px 20px;
     display: none;
     overflow: hidden;
@@ -397,8 +445,25 @@ aside .sidebar .message-count{
 .accordion-content p {
     margin: 0;
     color: #000;
+   text-justify: auto;
+   font-size: 13px; 
 }
 
+.accordion-content h3{
+    text-align: center;
+    font-size: medium;
+}
+.accordion-content img {
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+.accordion-content h4{
+    
+    font-size: 12px;
+}
 
 .accordion-btn.active + .accordion-content {
     display: block;
@@ -801,4 +866,26 @@ aside .sidebar .message-count{
     padding: 10px 20px;
     margin: 5px;
     border-radius: 3px;
+}
+.btn-custom{
+    background-color: #4CAF50;
+    color: white; 
+    border-radius: 6px;
+    outline: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 12px;
+    transition: background-color 0.3s ease;
+    width: 100%;
+}
+
+
+.btn-custom:hover {
+    background-color: #ddd;
+}
+
+.btn-custom.active {
+    background-color: #ccc;
+    font-weight: bold;
 }
