--- a/styles/users.css
+++ b/styles/users.css
@@ -123,6 +123,7 @@ b{
 
 aside{
     height: 100vh;
+    margin: 0%;
 }
 
 aside .toggle{
@@ -223,7 +224,7 @@ aside .sidebar .message-count{
 main{
     margin-top: 1.4rem;
     width: fit-content;
-    overflow-x: auto;
+    
 }
 
 main .analyse{
@@ -387,7 +388,7 @@ main .recent-orders a{
 
 .right-section .nav{
     display: flex;
-    justify-content: flex-end;
+    justify-content: end;
     gap: 2rem;
 }
 
@@ -461,6 +462,109 @@ main .recent-orders a{
 .right-section .user-profile h2{
     margin-bottom: 0.2rem;
 }
+.right-section .user-profile{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 1rem;
+    background-color: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.right-section .user-profile:hover{
+    box-shadow: none;
+}
+
+.right-section .user-profile img{
+    width: 11rem;
+    height: auto;
+    margin-bottom: 0.8rem;
+    border-radius: 50%;
+}
+
+.right-section .user-profile h2{
+    margin-bottom: 0.2rem;
+}
+
+.right-section .reminders{
+    margin-top: 2rem;
+}
+
+.right-section .reminders .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0.8rem;
+}
+
+.right-section .reminders .header span{
+    padding: 10px;
+    box-shadow: var(--box-shadow);
+    background-color: var(--color-white);
+    border-radius: 50%;
+}
+
+.right-section .reminders .notification{
+    background-color: var(--color-white);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 0.7rem;
+    padding: 1.4rem var(--card-padding);
+    border-radius: var(--border-radius-2);
+    box-shadow: var(--box-shadow);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.right-section .reminders .notification:hover{
+    box-shadow: none;
+}
+
+.right-section .reminders .notification .content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+}
+
+.right-section .reminders .notification .icon{
+    padding: 0.6rem;
+    color: var(--color-white);
+    background-color: var(--color-success);
+    border-radius: 20%;
+    display: flex;
+}
+
+.right-section .reminders .notification.deactive .icon{
+    background-color: var(--color-danger);
+}
+
+.right-section .reminders .add-reminder{
+    background-color: var(--color-white);
+    border: 2px dashed var(--color-primary);
+    color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.right-section .reminders .add-reminder:hover{
+    background-color: var(--color-primary);
+    color: white;
+}
+
+.right-section .reminders .add-reminder div{
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+}
 
 @media screen and (max-width: 1200px) {
     .container{
@@ -516,11 +620,26 @@ main .recent-orders a{
     main table tbody tr td:first-child{
         display: none;
     }
-    main .form-container{
-        overflow-x: auto;
+    
+
+    right-section .user-profile {
+        flex-direction: column;
+        padding: 1rem;
     }
 
-    
+    .right-section .user-profile img {
+        width: 8rem;
+    }
+
+    .right-section .reminders .notification {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .right-section .reminders .notification .content {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
 }
 .table_component {
@@ -580,7 +699,11 @@ main .recent-orders a{
         overflow: auto;
     }
     
-    
+    @keyframes showMenu {
+    to{
+        left: 0;
+    } 
+    }
     table, thead, tbody, th, td, tr {
         display: block;
     }
@@ -632,11 +755,7 @@ main .recent-orders a{
     }
       
 
-    @keyframes showMenu {
-       to{
-        left: 0;
-       } 
-    }
+    
 
     aside .logo{
         margin-left: 1rem;
@@ -688,6 +807,7 @@ main .recent-orders a{
     .right-section{
         width: 94%;
         margin: 0 auto 4rem;
+        justify-content: end;
     }
 
     .right-section .nav{
@@ -725,7 +845,84 @@ main .recent-orders a{
 
     .right-section .nav button span{
         font-size: 2rem;
+        display: flex;
     }
+    .right-section .reminders{
+        margin-top: 2rem;
+    }
+    
+    .right-section .reminders .header{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 0.8rem;
+    }
+    
+    .right-section .reminders .header span{
+        padding: 10px;
+        box-shadow: var(--box-shadow);
+        background-color: var(--color-white);
+        border-radius: 50%;
+    }
+    
+    .right-section .reminders .notification{
+        background-color: var(--color-white);
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-bottom: 0.7rem;
+        padding: 1.4rem var(--card-padding);
+        border-radius: var(--border-radius-2);
+        box-shadow: var(--box-shadow);
+        cursor: pointer;
+        transition: all 0.3s ease;
+    }
+    
+    .right-section .reminders .notification:hover{
+        box-shadow: none;
+    }
+    
+    .right-section .reminders .notification .content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+    }
+    
+    .right-section .reminders .notification .icon{
+        padding: 0.6rem;
+        color: var(--color-white);
+        background-color: var(--color-success);
+        border-radius: 20%;
+        display: flex;
+    }
+    
+    .right-section .reminders .notification.deactive .icon{
+        background-color: var(--color-danger);
+    }
+    
+    .right-section .reminders .add-reminder{
+        background-color: var(--color-white);
+        border: 2px dashed var(--color-primary);
+        color: var(--color-primary);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+    
+    .right-section .reminders .add-reminder:hover{
+        background-color: var(--color-primary);
+        color: white;
+    }
+    
+    .right-section .reminders .add-reminder div{
+        display: flex;
+        align-items: center;
+        gap: 0.6rem;
+    }
+    
 
 }
 
@@ -870,4 +1067,8 @@ td img {
     max-width: 50px;
     max-height: 50px;
     border-radius: 50%;
+}
+
+tbody{
+    background-color: white;
 }
