--- a/styles/employees.css
+++ b/styles/employees.css
@@ -181,3 +181,8 @@ button[type="submit"] {
 button[type="submit"]:hover {
     background-color: #45a049;
 }
+#add-gender {
+    border-radius: 4px;
+    padding: 7px;
+    border: 1px solid #ccc;
+}
